--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "name": "titanite-react-redux",
   "version": "0.1.0",
   "private": true,
+  "homepage": "https://spik3r.github.io/titanite-react-redux",
   "dependencies": {
     "axios": "^0.19.0",
     "react": "^16.10.2",
