--- a/package.json
+++ b/package.json
@@ -5,6 +5,7 @@
   "homepage": "https://spik3r.github.io/titanite-react-redux",
   "dependencies": {
     "axios": "^0.19.0",
+    "gh-pages": "^2.1.1",
     "react": "^16.10.2",
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
@@ -14,6 +15,7 @@
     "redux-saga": "^1.1.1"
   },
   "scripts": {
+    "deploy": "yarn build && gh-pages -d build",
     "start": "react-scripts start",
     "build": "react-scripts build",
     "test": "react-scripts test",
