--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "titanite-react-redux",
   "version": "0.1.0",
-  "private": true,
+  "private": false,
   "homepage": "https://spik3r.github.io/titanite-react-redux",
   "dependencies": {
     "axios": "^0.19.0",
