--- a/package.json
+++ b/package.json
@@ -2,11 +2,14 @@
   "name": "titanite-react-redux",
   "version": "0.1.0",
   "private": false,
+  "license": "MIT",
   "homepage": "https://spik3r.github.io/titanite-react-redux/#",
   "dependencies": {
     "axios": "^0.19.0",
+    "chart.js": "^2.9.2",
     "gh-pages": "^2.1.1",
     "react": "^16.10.2",
+    "react-chartjs-2": "^2.8.0",
     "react-dom": "^16.10.2",
     "react-redux": "^7.1.1",
     "react-router-dom": "^5.1.2",
